--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
   },
   "dependencies": {
     "gatsby": "^2.18.12",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-big-calendar": "^0.23.0",
+    "react-datetime-picker": "^2.9.0",
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
